objects/F9CallDispositions__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>List containing call dispositions used by Five9, referenced when updating Lead Status from call results.</description>
    <fields>
        <fullName>Consultation_Type__c</fullName>
        <label>Consultation Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <description>Field to store the call disposition (CallResult) of the Five9 task/activity history. MUST BE UNIQUE as a key for map to corresponding values.</description>
        <label>Disposition</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <description>Holds Corresponding lead status for each call disposition</description>
        <label>Lead Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger_Eloqua_Follow_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to map to checkbox field that Eloqua can read to send follow-up information such as postcards and other marketing material.</description>
        <label>Trigger Eloqua Follow-Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trigger_No_Contact_Activities__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to map to checkbox field that Eloqua can read to proceed with no-contact activities</description>
        <label>Trigger No-Contact Activities</label>
        <type>Checkbox</type>
    </fields>
    <label>F9 Call Dispositions</label>
</CustomObject>